# hive-manager

./: .gitignore  LICENSE  PRD.md  README.md  m2-issue-body.txt  package-lock.json  package.json  vite.config.js  vitest.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  operator-preview.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: main-window-commands.toml
src-tauri/src/: acl_parity.rs  lib.rs  main.rs  tauri_shim.rs
src-tauri/src/actions/: context.rs  coordination.rs  error.rs  mod.rs  pty.rs  registry.rs  render.rs  tests.rs
src-tauri/src/adapters/: antigravity.rs  claude_code.rs  codex.rs  cursor.rs  droid.rs  gemini.rs  mod.rs  opencode.rs  qwen.rs
src-tauri/src/artifacts/: collector.rs  mod.rs  resolver_input.rs
src-tauri/src/cli/: health.rs  mod.rs  registry.rs
src-tauri/src/commands/: coordination_commands.rs  git_commands.rs  mod.rs  pty_commands.rs  session_commands.rs
src-tauri/src/coordination/: contracts.rs  injection.rs  mod.rs  queue_manager.rs  state.rs
src-tauri/src/domain/: agent.rs  artifact.rs  cell.rs  event.rs  execution.rs  mod.rs  resolver.rs  run_journal.rs  session.rs  status.rs  workspace.rs
src-tauri/src/events/: bus.rs  emitter.rs  mod.rs
src-tauri/src/http/: error.rs  mod.rs  routes.rs  state.rs  tests.rs
src-tauri/src/orchestrator/: fusion.rs  mod.rs  planner.rs  resolver.rs  session_orchestrator.rs
src-tauri/src/preview/: mod.rs
src-tauri/src/pty/: manager.rs  mod.rs  session.rs  session_stub.rs
src-tauri/src/runtime/: local_process.rs  mod.rs  (+3 more)
(+195 files in other folders)
